# compiler-project

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ast/: CMakeLists.txt
ast/include/ast/: functions_table.hpp  node.hpp  node_type.hpp  syntax_tree.hpp  types.hpp  variables_table.hpp
ast/src/: node.cpp
backend/: CMakeLists.txt
backend/include/backend/: ast.hpp  astnode.hpp  base_error.hpp  error_buffer.hpp  lexer.hpp  parser.hpp  preprocessor.hpp  stringvec.hpp  token.hpp  tokenlist.hpp
backend/include/backend/ast/: node.hpp  node_type.hpp
backend/include/backend/lexer/: lexer.hpp  lexer_error.hpp  token.hpp  token_types.hpp  tokenlist.hpp
backend/include/backend/optimizer/: optimizer.hpp  optimizer_context.hpp  optimizer_options.hpp
backend/include/backend/parser/: handler_registry.hpp  parser.hpp  parser_context.hpp  parser_error.hpp  parser_state.hpp  register_handler.hpp  type_registry.hpp
backend/include/backend/parser/handlers/: base_handler.hpp  branch_root_handler.hpp  elif_statement_handler.hpp  expression_handler.hpp  function_arguments_handler.hpp  function_body_handler.hpp  function_definition_handler.hpp  if_statement_handler.hpp  program_root_handler.hpp  (+3 more)
backend/include/backend/preprocessor/: preprocessor.hpp
backend/include/backend/semantizer/: semantizer.hpp  semantizer_contex.hpp  semantizer_context.hpp  semantizer_error.hpp
backend/src/: ast.cpp  astnode.cpp  base_error.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  stringvec.cpp  token.cpp  tokenlist.cpp
backend/src/lexer/: lexer.cpp  token.cpp  tokenlist.cpp
backend/src/optimizer/: optimizer.cpp
backend/src/parser/: handler_registry.cpp  parser.cpp  register_handler.cpp  type_registry.cpp
backend/src/parser/handlers/: base_handler.cpp  branch_root_handler.cpp  elif_statement_handler.cpp  expression_handler.cpp  function_arguments_handler.cpp  function_body_handler.cpp  function_definition_handler.cpp  if_statement_handler.cpp  program_root_handler.cpp  return_statement_handler.cpp  variable_declaration_handler.cpp  while_statement_handler.cpp
backend/src/preprocessor/: preprocessor.cpp
backend/src/semantizer/: semantizer.cpp
cli/: CMakeLists.txt
cli/include/cli/: compiler.hpp  dumping.hpp  logger.hpp  serialization.hpp
cli/src/: compiler.cpp  dumping.cpp  main.cpp  serialization.cpp
compiler/: CMakeLists.txt
compiler/cmake/: utils.cmake  version.cmake
compiler/include/compiler/ast/: declarative.hpp  functions_table.hpp  node.hpp  node_type.hpp  syntax_tree.hpp  types.hpp  variables_table.hpp
compiler/include/compiler/backend/: base_error.hpp  stringvec.hpp
compiler/include/compiler/cli/: compiler.hpp  dumping.hpp  helpers.hpp  logger.hpp  options.hpp  version.hpp.in
compiler/include/compiler/optree/: adaptors.hpp  attribute.hpp  base_adaptor.hpp  builder.hpp  declarative.hpp  definitions.hpp  helpers.hpp  operation.hpp  program.hpp  traits.hpp  types.hpp  value.hpp
compiler/include/compiler/utils/: base_error.hpp  debug.hpp  error_buffer.hpp  helpers.hpp  language.hpp  pipeline.hpp  platform.hpp  source_files.hpp  source_ref.hpp  timer.hpp  utils.hpp
compiler/lib/: CMakeLists.txt
compiler/lib/ast/: CMakeLists.txt  node.cpp  syntax_tree.cpp
compiler/lib/backend/: CMakeLists.txt
compiler/lib/backend/ast/: CMakeLists.txt
compiler/lib/backend/lexer/: token.cpp
compiler/lib/backend/optree/: CMakeLists.txt
compiler/lib/cli/: CMakeLists.txt  compiler.cpp  helpers.cpp  logger.cpp  main.cpp  options.cpp
compiler/lib/codegen/: CMakeLists.txt  ir_generator.cpp
compiler/lib/codegen/ast_to_llvmir/: .clang-tidy  CMakeLists.txt  ir_generator.cpp
compiler/lib/codegen/optree_to_llvmir/: CMakeLists.txt  llvmir_generator.cpp
compiler/lib/frontend/: CMakeLists.txt
compiler/lib/frontend/converter/: converter.cpp
compiler/lib/frontend/lexer/: lexer.cpp  token.cpp
compiler/lib/frontend/parser/: parser.cpp  type_registry.cpp
compiler/lib/frontend/preprocessor/: preprocessor.cpp
compiler/lib/optree/: CMakeLists.txt  adaptors.cpp  attribute.cpp  builder.cpp  declarative.cpp  helpers.cpp  operation.cpp  program.cpp  types.cpp  value.cpp
compiler/lib/utils/: CMakeLists.txt  base_error.cpp  source_files.cpp
compiler/tests/: CMakeLists.txt
compiler/tests/ast/: CMakeLists.txt  declarative.cpp  node.cpp  syntax_tree.cpp
compiler/tests/backend/: CMakeLists.txt  lexer.cpp  optimizer.cpp  parser.cpp  preprocessor.cpp  semantizer.cpp  token.cpp
compiler/tests/backend/ast/: CMakeLists.txt  optimizer.cpp  semantizer.cpp
compiler/tests/backend/optree/: CMakeLists.txt  main.cpp
compiler/tests/cli/: CMakeLists.txt  run_test.py
compiler/tests/cli/bubble_sort/: input.txt  output.txt  program.py
compiler/tests/cli/debug/: output.txt  program.py
compiler/tests/cli/for_loop/: program.py
compiler/tests/cli/hello_world/: program.py
compiler/tests/cli/input/: input.txt  output.txt  program.py
compiler/tests/cli/list/: output.txt  program.py
compiler/tests/cli/print/: output.txt  program.py
compiler/tests/codegen/: CMakeLists.txt
compiler/tests/codegen/ast_to_llvmir/: CMakeLists.txt  ir_generator.cpp
compiler/tests/codegen/optree_to_llvmir/: CMakeLists.txt  llvmir_generator.cpp
compiler/tests/frontend/: CMakeLists.txt  converter.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  token.cpp
compiler/tests/optree/: CMakeLists.txt  base_adaptor.cpp  declarative.cpp  helpers.cpp  main.cpp  operation.cpp  type_storage.cpp
compiler/tests/utils/: CMakeLists.txt  base_error.cpp
ir_generator/: CMakeLists.txt
ir_generator/include/ir_generator/: ir_generator.hpp
ir_generator/src/: ir_generator.cpp
tests/ast/: CMakeLists.txt  node.cpp  syntax_tree.cpp
tests/backend/: CMakeLists.txt  lexer.cpp  optimizer.cpp  parser.cpp  preprocessor.cpp  semantizer.cpp  token.cpp
tests/ir_generator/: CMakeLists.txt  ir_generator.cpp
utils/: CMakeLists.txt
utils/include/utils/: source.hpp  source_file.hpp  source_files.hpp  source_line.hpp  source_ref.hpp
utils/src/: source.cpp  source_file.cpp  source_files.cpp
(+209 files in other folders)
