cmake_minimum_required(VERSION 3.22)

foreach(TARGET_SUFFIX IN LISTS ENABLE_CODEGEN)
    set(CODEGEN_TARGET "codegen_${TARGET_SUFFIX}")
    set(TEST_TARGET "${CODEGEN_TARGET}_test")
    if (TARGET ${CODEGEN_TARGET})
        if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_SUFFIX}")
            add_subdirectory(${TARGET_SUFFIX})
            add_dependencies(tests ${TEST_TARGET})
            add_dependencies(run_tests "run_${TEST_TARGET}")
        else()
            message(WARNING "Test target for codegen target '${CODEGEN_TARGET}' is not found")
        endif()
    endif()
endforeach()
